add writing and photos index pages

--- a/src/pages/writing/2015-03-02-rhizome.md
+++ b/src/pages/writing/2015-03-02-rhizome.md
@@ -3,6 +3,7 @@ title: Is The Internet A Rhizome?
 subtitle: How the language baked into the foundation of computing shapes the internet
 date: "2015-03-02T22:12:03.284Z"
 path: "/writing/rhizome/"
+type: "writing"
 ---
 
 Deleuze and Guattari defined the rhizome as a challenge to the root-tree structure epidemic in critical thought. Since this seminal definition, the ontological structure (or lack thereof) of the rhizome has been readily applied to the internet. In its comparisons to a rhizome, the internet has been identified as an assemblage of connections that defy the problematic binarism inherent in the root-tree structure. However, challenges to this application of the rhizome are prominent. In this essay, I will explore just one of these challenges: examining the hegemonic nature of the English language as it applies to the computer, the basic building block of the internet. First, I will outline the privileged position of the English language in the basic architecture of the components of the internet, from the machine level to the level of programming language and internet protocol. Then, I will argue that this contradicts Deleuze and Guattari’s basic edict that a rhizome has no ‘hierarchical modes of communication and pre-established paths’ (1459), and that instead, this hegemonic power of English has formed the internet into only a partial rhizome, if not a solid structure constructed and continuously policed by discourse.
