--- a/src/pages/writing/2015-04-23-siri.md
+++ b/src/pages/writing/2015-04-23-siri.md
@@ -3,6 +3,7 @@ title: Siri, Make Me A Sandwich
 subtitle: Evolving representations of womens’ bodies in film, video-games, and digital assistants
 date: "2015-04-23T22:12:03.284Z"
 path: "/writing/siri/"
+type: "writing"
 ---
 
 “Siri, what appointments do I have today?”, one could ask of Apple’s digital assistant. Built into every modern iPhone is an incorporeal secretary whose primary uses include setting and reminding one of appointments and alarms, checking the weather, giving directions, or simply checking a fact through some quick research. Microsoft and Google’s devices have their own equivalents, Cortana and Google Now respectively. When hearing the kinds of interactions users have with these assistants, who all have female voices, it is hard not to be reminded of the likes of the alpha-males of the Mad Men office, who employ often sexualised young women to manage their calendar and Rolodex. How has this gendered role determination, that was supposedly destroyed by the feminisms of the late twentieth century, been transplanted from physical young women, to simulated women distributed on every iOS, Microsoft Phone, and Android device?
