--- a/content/note/2019-12-30-2010-lists.md
+++ b/content/note/2019-12-30-2010-lists.md
@@ -3,6 +3,7 @@ title: 'The List of 2010 Lists'
 slug: 2010-lists
 date: 2019-12-30T21:10:46
 draft: false
+link: http://www.fimoculous.com/decade-review-2010.cfm
 tags:
   - web
   - link
