--- a/content/note/2020-01-04-calm-tech.md
+++ b/content/note/2020-01-04-calm-tech.md
@@ -3,6 +3,7 @@ title: 'Calm Technology'
 slug: calm-technology
 date: 2020-01-04T19:09:08
 draft: false
+link: https://calmtech.com/
 tags:
   - article
   - link
