--- a/content/note/2020-03-27-1918-flu-letter.md
+++ b/content/note/2020-03-27-1918-flu-letter.md
@@ -1,5 +1,5 @@
 ---
-title: Letters of Note: God be with you till we meet again
+title: God be with you till we meet again
 slug: 1918-flu-letter
 date: 2020-03-27T10:08:21.691Z
 tags:
