--- a/content/highlight/2020-03-27-1918-flu-letter.md
+++ b/content/highlight/2020-03-27-1918-flu-letter.md
@@ -3,6 +3,7 @@ title: God be with you till we meet again
 slug: 1918-flu-letter
 date: 2020-03-27T10:08:21.691Z
 link: http://www.lettersofnote.com/2020/03/god-be-with-you-till-we-meet-again.html
+url: /note/2020-03-27-1918-flu-letter
 tags:
   - letter
   - covid-19
